Adjusted styling and fixed overflow margin issue

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -69,30 +69,46 @@
 
 /* Home page CSS */
 video {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   object-fit: cover;
 }
+
 .home-container {
+  width: 100vw;
+  height: 100vh;
   position: absolute;
-  margin: 10em;
+  margin-top: 10em;
+  margin-bottom: 10em;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .home-title {
-  font-family: 'Poppins', sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color: black;
   font-size: 40px;
+  margin-left: 5.5em;
+}
+
+.home-game-title-container {
+  width: 100vw;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .home-game-title {
   font-family: 'Ultra', serif;
-  font-size: 100px
+  font-size: 100px;
+  margin-right: 0.5em;
 }
 
 .home-description {
-  font-family: 'Poppins', sans-serif;
-  font-size: 20px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 25px;
+  color: black;
+  margin-left: 3em;
   text-align: center;
+
 }
